--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "emoji-mart": "^3.0.1",
     "pusher": "^5.0.0",
     "pusher-js": "^7.0.3",
     "react": "^16.13.1",
